Refactor destroy targeting to predicate-based filters
Co-authored-by: Codex <codex@openai.com>